--- a/design_system.html
+++ b/design_system.html
@@ -16,15 +16,17 @@
 <body>
   <!--Navegación-->
   <header>
-    <nav>
-      <ul>
-        <li><a href="#">Benito Shop</a></li>
-        <li><a href="#">Catálogo</a></li>
-        <li><a href="#">Contacto</a></li>
-        <li><a href="#">Nosotros</a></li>
-        <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
-        <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
-      </ul>
+    <nav class="nav">
+      <div>
+        <ul>
+          <li><a href="#">Benito Shop</a></li>
+          <li><a href="#">Catálogo</a></li>
+          <li><a href="#">Contacto</a></li>
+          <li><a href="#">Nosotros</a></li>
+          <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+          <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
+        </ul>
+      </div>
       <div>
         <form>
           <div>
@@ -38,35 +40,47 @@
   <!--Navegación-->
 
   <!--Botones-->
-  <a href="#">VER AHORA</a>
-  <a href="#">Volver</a>
-  <a href="#">Ver artículos</a>
-  <a href="#">Ver</a>
-  <a href="#">Atrás</a>
-  <a href="#"> </a><!--Enlace redondeado-->
-  <button>CREAR AHORA</button>
-  <button>Finalizar Compra</button>
-  <button>Añadir al Carro</button>
-  <button type="submit">Enviar</button>
-  <button type="reset">X</button>
-  <input type="text" name="" id="" placeholder="">
-  <input type="text" name="" id="" placeholder="">
+  <div>
+    <p>Enlaces</p>
+    <a class="button-white--big" href="#">VER AHORA</a>
+    <a class="button-white--big" href="#">Volver</a>
+    <a class="button-white--small" href="#">Ver artículos</a>
+    <a class="button-yellow--small" href="#">Ver</a>
+    <a class="button-yellow--small2" href="#">Atrás</a>
+    <a href="#"> </a><!--Enlace redondeado-->
+  </div>
+  <div>
+    <p>Botones</p>
+    <button class="button-white--big">CREAR AHORA</button>
+    <button class="button-white--big">Finalizar Compra</button>
+    <button class="button-white--big">Añadir al Carro</button>
+    <button class="button-white--big" type="submit">Enviar</button>
+    <button class="button-white--x" type="reset">X</button>
+  </div>
+  <!--
+    <div>
+      <p>Inputs</p>
+      <input class="form-input1" type="text" name="" id="" placeholder="">
+      <input type="text" name="" id="" placeholder="">
+    </div>
+  -->
   <!--Botones-->
 
 
 <!--Paleta de colores-->
-<div>
-  <div>#C6B058</div>
-  <div>#DFC764</div>
-  <div>#FEEB9C</div>
-  <div>#DFC764 / degradado</div>
-  <div>#FFF8DB</div>
-  <div>#000000</div>
-  <div>#4E4E4E</div>
-  <div>#6A6A6A</div>
-  <div>#C0C0C0</div>
-  <div>#D6D6D6</div>
-  <div>#FFFFFF</div>
+<div >
+  <p>Paleta de Colores</p>
+  <div class="color-containers color1">#C6B058</div>
+  <div class="color-containers color2">#DFC764</div>
+  <div class="color-containers color3">#FEEB9C</div>
+  <div class="color-containers color4">#DFC764 / degradado</div>
+  <div class="color-containers color5">#FFF8DB</div>
+  <div class="color-containers color6">#000000</div>
+  <div class="color-containers color7">#4E4E4E</div>
+  <div class="color-containers color8">#6A6A6A</div>
+  <div class="color-containers color9">#C0C0C0</div>
+  <div class="color-containers color10">#D6D6D6</div>
+  <div class="color-containers color11">#FFFFFF</div>
 </div>
 <!--Paleta de colores-->
 
@@ -83,26 +97,26 @@
 <!--Fuentes-->
 
   <!--Footer-->
-  <footer>
-    <div>
-      <img src="img/patita-logo.png">
-      <p>© 2022 Benito Shop. Todos los derechos reservavos</p>
+  <footer class="footer">
+    <div class="footer__copyright">
+      <img class="copyright" src="img/patita-logo.png">
+      <p>© 2022 Benito Shop. Todos los derechos reservados</p>
     </div>
-    <div>
+    <div class="footer__questions">
       <p>Preguntas Frecuentes</p>
       <ul>
-        <li>¿Tienen tienda física?</li>
-        <li>¿Cada cuánto actualizan la página?</li>
-        <li>¿Cuánto tiempo dura mi pedido en llegar?</li>
-        <li>¿Cómo hago un pedido en línea?</li>
-        <li>¿Cómo puedo realizar una cotización?</li>
+        <li><img src="img/punto.png"> ¿Tienen tienda física?</li>
+        <li><img src="img/punto.png"> ¿Cada cuánto actualizan la página?</li>
+        <li><img src="img/punto.png"> ¿Cuánto tiempo dura mi pedido en llegar?</li>
+        <li><img src="img/punto.png"> ¿Cómo hago un pedido en línea?</li>
+        <li><img src="img/punto.png"> ¿Cómo puedo realizar una cotización?</li>
       </ul>
     </div>
-    <div>
+    <div class="footer__social">
       <p>Redes Sociales</p>
-      <img src="img/Messenger.svg" alt="Enlace hacia Messenger">
-      <img src="img/Telegram.svg" alt="Enlace hacia Telegram">
-      <img src="img/WhatsApp.svg" alt="Enlace hacia WhatsApp">
+      <a href="https://www.facebook.com/messages/t/102359524991387"><img src="img/Messenger.svg" alt="Enlace vía Messenger"></a>
+      <a href=""><img src="img/Telegram.svg" alt="Enlace vía Telegram"></a>
+      <a href=""><img src="img/WhatsApp.svg" alt="Enlace vía WhatsApp"></a>
     </div>
   </footer>
   <!--Footer-->
