--- a/design_system.html
+++ b/design_system.html
@@ -16,8 +16,8 @@
 <body>
   <!--Navegación-->
   <header>
-    <nav class="nav">
-      <div>
+    <nav>
+      <div class="nav-principal">
         <ul>
           <li><a href="#">Benito Shop</a></li>
           <li><a href="#">Catálogo</a></li>
