Se finalaliza nav y footer

--- a/design_system.html
+++ b/design_system.html
@@ -19,7 +19,7 @@
     <nav>
       <div class="nav-principal">
         <ul>
-          <li><a href="#">Benito Shop</a></li>
+          <li><a href="#"><img src="img/logo1.svg"></a></li>
           <li><a href="#">Catálogo</a></li>
           <li><a href="#">Contacto</a></li>
           <li><a href="#">Nosotros</a></li>
@@ -29,10 +29,10 @@
       </div>
       <div>
         <form>
-          <div>
-            <input type="search" placeholder="Busca un artículo!">
+          <div class="search-input">
+              <input type="search" class="search-input__bar" name="Email" placeholder="¡Busca un artículo!">
+              <input class="button--submit" src="img/lupa.svg" type="image">
           </div>
-          <input type="submit">
         </form>
       </div>
     </nav>
@@ -40,7 +40,7 @@
   <!--Navegación-->
 
   <!--Botones-->
-  <div>
+  <div class="design-text">
     <p>Enlaces</p>
     <a class="button-white--big" href="#">VER AHORA</a>
     <a class="button-white--big" href="#">Volver</a>
@@ -49,7 +49,7 @@
     <a class="button-yellow--small2" href="#">Atrás</a>
     <a href="#"> </a><!--Enlace redondeado-->
   </div>
-  <div>
+  <div class="design-text">
     <p>Botones</p>
     <button class="button-white--big">CREAR AHORA</button>
     <button class="button-white--big">Finalizar Compra</button>
@@ -68,7 +68,7 @@
 
 
 <!--Paleta de colores-->
-<div >
+<div class="design-text">
   <p>Paleta de Colores</p>
   <div class="color-containers color1">#C6B058</div>
   <div class="color-containers color2">#DFC764</div>
@@ -85,7 +85,7 @@
 <!--Paleta de colores-->
 
 <!--Fuentes-->
-<div>
+<div class="design-text">
   <h1>Fuentes - Mali</h1>
   <!----------------------->
   <h1>H1 - SemiBold Italic - 75px</h1>
