--- a/design_system.html
+++ b/design_system.html
@@ -40,7 +40,7 @@
   <!--Navegación-->
 
   <!--Botones-->
-  <div class="design-text">
+  <div>
     <p>Enlaces</p>
     <a class="button-white--big" href="#">VER AHORA</a>
     <a class="button-white--big" href="#">Volver</a>
@@ -49,7 +49,7 @@
     <a class="button-yellow--small2" href="#">Atrás</a>
     <a href="#"> </a><!--Enlace redondeado-->
   </div>
-  <div class="design-text">
+  <div>
     <p>Botones</p>
     <button class="button-white--big">CREAR AHORA</button>
     <button class="button-white--big">Finalizar Compra</button>
@@ -57,35 +57,26 @@
     <button class="button-white--big" type="submit">Enviar</button>
     <button class="button-white--x" type="reset">X</button>
   </div>
-  <!--
-    <div>
-      <p>Inputs</p>
-      <input class="form-input1" type="text" name="" id="" placeholder="">
-      <input type="text" name="" id="" placeholder="">
-    </div>
-  -->
-  <!--Botones-->
-
 
 <!--Paleta de colores-->
-<div class="design-text">
+<div >
   <p>Paleta de Colores</p>
-  <div class="color-containers color1">#C6B058</div>
-  <div class="color-containers color2">#DFC764</div>
-  <div class="color-containers color3">#FEEB9C</div>
+  <div class="color-containers color1">#c6b058</div>
+  <div class="color-containers color2">#dfc764</div>
+  <div class="color-containers color3">#feeb9c</div>
   <div class="color-containers color4">#DFC764 / degradado</div>
-  <div class="color-containers color5">#FFF8DB</div>
+  <div class="color-containers color5">#fff8dB</div>
   <div class="color-containers color6">#000000</div>
-  <div class="color-containers color7">#4E4E4E</div>
-  <div class="color-containers color8">#6A6A6A</div>
-  <div class="color-containers color9">#C0C0C0</div>
-  <div class="color-containers color10">#D6D6D6</div>
+  <div class="color-containers color7">#4e4e4e</div>
+  <div class="color-containers color8">#6a6a6a</div>
+  <div class="color-containers color9">#c0c0c0</div>
+  <div class="color-containers color10">#d6d6d6</div>
   <div class="color-containers color11">#FFFFFF</div>
 </div>
 <!--Paleta de colores-->
 
 <!--Fuentes-->
-<div class="design-text">
+<div>
   <h1>Fuentes - Mali</h1>
   <!----------------------->
   <h1>H1 - SemiBold Italic - 75px</h1>
