--- a/design_system.html
+++ b/design_system.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -56,6 +56,15 @@
     <button class="button-white--big">Añadir al Carro</button>
     <button class="button-white--big" type="submit">Enviar</button>
     <button class="button-white--x" type="reset">X</button>
+  </div>
+  <p>Inputs</p>
+  <div class="contact">
+    <form class="contact-form">
+      <input type="text" class="textb" placeholder="Your Name">
+      <input type="email" class="textb" placeholder="Your Email">
+      <textarea placeholder="Your Message"></textarea>
+      <input type="submit" class="btn" value='Send'>
+    </form>
   </div>
 
 <!--Paleta de colores-->
