--- a/products.html
+++ b/products.html
@@ -48,7 +48,7 @@
         </div>
         <div class="products-info-container">
           <div>
-            <div class="product-square">
+            <div class="product-square__yellow">
               <img src="img/bolsoCafe.png" alt="bolso de gato cafe">
             </div>
             <div class="price-square">
@@ -56,7 +56,7 @@
             </div>
           </div>
           <div>
-            <div class="product-square">
+            <div class="product-square__yellow">
               <img src="img/bolsoRosado.png" alt="bolso de gato rosado">
             </div>
             <div class="price-square">
@@ -71,7 +71,7 @@
         </div>
         <div class="products-info-container">
           <div>
-            <div class=" product-square">
+            <div class="product-square__yellow">
               <img src="img/lazo1.png" alt="lazo de gato de flores">
             </div>
             <div class="price-square">
@@ -79,7 +79,7 @@
             </div>
           </div>
           <div>
-            <div class="product-square">
+            <div class="product-square__yellow">
               <img src="img/culoegato.png" alt="culo de gato gris">
             </div>
             <div class="price-square">
@@ -94,7 +94,7 @@
         </div>
         <div class="products-info-container">
           <div>
-            <div class="product-square">
+            <div class="product-square__yellow">
               <img src="img/collares.png" alt="collares negro, azul y rojo">
             </div>
             <div class="price-square">
@@ -102,7 +102,7 @@
             </div>
           </div>
           <div>
-            <div class="product-square">
+            <div class="product-square__yellow">
               <img src="img/collargrande.png" alt="collar con huesos dorados">
             </div>
             <div class="price-square">
