--- a/christmas.html
+++ b/christmas.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Navideños</title>
+  <title>Productos | Navideños</title>
 </head>
 
 <body>
