--- a/newest.html
+++ b/newest.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Lo mas nuevo</title>
+  <title>Prodcutos | Lo mas nuevo</title>
 </head>
 
 <body>
