--- a/offerts.html
+++ b/offerts.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Ofertas</title>
+  <title>Productos | Ofertas</title>
 </head>
 
 <body>
