--- a/trending.html
+++ b/trending.html
@@ -12,7 +12,7 @@
     rel="stylesheet">
   <link rel="icon" href="img/patita-logo.png">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Tendencia</title>
+  <title>Productos | Tendencia</title>
 </head>
 
 <body>
