--- a/cart-page.html
+++ b/cart-page.html
@@ -44,54 +44,86 @@
   <!--Content-->
   <section class="cart">
     <div class="cart-block">
-      <h2>Producto</h2>
-      <ul class="cart-product-column">
-        <li class="cart-product-column__product"><p>Collar para gato</p></li>
-        <li class="cart-product-column__product"><p>Collar Lazo elegante</p></li>
-        <li class="cart-product-column__product"><p>Suéter Tejido Navideño</p></li>
-      </ul>
+      <div class="cart-block__table">
+        <ul class="cart-product-column">
+          <li class="cart-product-column__title">
+            <h2>Producto</h2>
+          </li>
+          <li class="cart-product-column__product">
+            <p>Collar para gato</p>
+          </li>
+          <li class="cart-product-column__product">
+            <p>Collar Lazo elegante</p>
+          </li>
+          <li class="cart-product-column__product">
+            <p>Suéter Tejido Navideño</p>
+          </li>
+        </ul>
 
-      <h2>Precio</h2>
-      <ul class="cart-price-column">
-        <li class="cart-price-column__price"><p>₡1000</p></li>
-        <li class="cart-price-column__price"><p>₡1500</p></li>
-        <li class="cart-price-column__price"><p>₡4000</p></li>
-      </ul>
+        <ul class="cart-price-column">
+          <li class="cart-price-column__title">
+            <h2>Precio</h2>
+          </li>
+          <li class="cart-price-column__price">
+            <p>₡1000</p>
+          </li>
+          <li class="cart-price-column__price">
+            <p>₡1500</p>
+          </li>
+          <li class="cart-price-column__price">
+            <p>₡4000</p>
+          </li>
+        </ul>
 
-      <h2>Cantidad</h2>
-      <ul class="cart-amount-column">
-        <li class="cart-amount-column__amount">
-          <p>1</p>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-        </li>
-        <li class="cart-amount-column__amount">
-          <p>2</p>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-        </li>
-        <li class="cart-amount-column__amount">
-          <p>4</p>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-          <a href="#"><img src="" alt=""><img src="img/icon-arrow-top.png" alt=""></a>
-        </li>
-      </ul>
+        <ul class="cart-amount-column">
+          <li class="cart-amount-column__title">
+            <h2>Cantidad</h2>
+          </li>
+          <li class="cart-amount-column__amount">
+            <p>1</p>
+            <div class="cart-amount-column-amount__buttons">
+              <a href="#"><img src="img/icon-arrow-top.png" alt=""></a>
+              <a href="#"><img class="cart-amount-column-amount-button-reverse" src="img/icon-arrow-top.png" alt=""></a>
+            </div>
+          </li>
+          <li class="cart-amount-column__amount">
+            <p>2</p>
+            <div class="cart-amount-column-amount__buttons">
+              <a href="#"><img class="cart-amount-column-amount-button" src="img/icon-arrow-top.png" alt=""></a>
+              <a href="#"><img class="cart-amount-column-amount-button-reverse cart-amount-column-amount-button"
+                  src="img/icon-arrow-top.png" alt=""></a>
+            </div>
+          </li>
+          <li class="cart-amount-column__amount">
+            <p>4</p>
+            <div class="cart-amount-column-amount__buttons">
+              <a href="#"><img class="cart-amount-column-amount-button" src="img/icon-arrow-top.png" alt=""></a>
+              <a href="#"><img class="cart-amount-column-amount-button-reverse cart-amount-column-amount-button"
+                  src="img/icon-arrow-top.png" alt=""></a>
+            </div>
+          </li>
+        </ul>
 
-      <ul class="cart-delete-column">
-        <li class="cart-delete-column__button">
-          <a href="#"><img src="img/icon-trash.png" alt=""></a>
-        </li>
-        <li class="cart-delete-column__button">
-          <a href="#"><img src="img/icon-trash.png" alt=""></a>
-        </li>
-        <li class="cart-delete-column__button">
-          <a href="#"><img src="img/icon-trash.png" alt=""></a>
-        </li>
-      </ul>
+        <ul class="cart-delete-column">
+          <li>
+            <a href="#"><img class="cart-delete-column__button" src="img/icon-trash.png" alt=""></a>
+          </li>
+          <li>
+            <a href="#"><img class="cart-delete-column__button" src="img/icon-trash.png" alt=""></a>
+          </li>
+          <li>
+            <a href="#"><img class="cart-delete-column__button" src="img/icon-trash.png" alt=""></a>
+          </li>
+        </ul>
+      </div>
     </div>
     <div class="cart-buttom-buttons">
-      <a href="#" class="cart-buttom-buttons__back-button"><h3>Volver</h3></a>
-      <a href="#" class="cart-buttom-buttons__end-button"><h3>Finalizar compra</h3></a>
+      <a href="#" class="cart-buttom-buttons__button">
+        <h3>Volver</h3>
+      </a>
+      <a href="#" class="cart-buttom-buttons__button">
+        <h3>Finalizar compra</h3>
+      </a>
     </div>
   </section>
   <!--Content-->
