--- a/cart-page-empty.html
+++ b/cart-page-empty.html
@@ -46,10 +46,13 @@
     <div class="cart-empty-block">
       <h2>El carrito está vacío!</h2>
       <p>Echá un vistazo al catálogo!</p>
-      <p>Podés realizar consultas a través de nuestro centro de <span><a href="#">contacto</a></span></p>
+      <p>Podés realizar consultas a través de <br> nuestro centro de <span><a href="#">contacto</a></span></p>
+      <img src="img/Gato-con-carrito.png" alt="">
     </div>
     <div class="cart-empty-buttom-button">
-      <a href="#"><h3>Volver</h3></a>
+      <a href="#">
+        <h3>Volver</h3>
+      </a>
     </div>
   </section>
   <!--Footer-->
