Se agregan cambios

--- a/design_system.html
+++ b/design_system.html
@@ -60,24 +60,24 @@
   <!--Navegación-->
 
   <!--Botones-->
-  <div>
-    <p>Enlaces</p>
+  <div class="enlaces">
+    <p class="enlaces">Enlaces</p>
     <a class="button-white--big" href="#">VER AHORA</a>
     <a class="button-white--big" href="#">Volver</a>
     <a class="button-white--small" href="#">Ver artículos</a>
     <a class="button-yellow--small" href="#">Ver</a>
     <a class="button-yellow--small2" href="#">Atrás</a>
   </div>
-  <div>
-    <p>Botones</p>
+  <div class="enlaces">
+    <p class="enlaces">Botones</p>
     <button class="button-white--big">CREAR AHORA</button>
     <button class="button-white--big">Finalizar Compra</button>
     <button class="button-white--big">Añadir al Carro</button>
     <button class="button-white--big" type="submit">Enviar</button>
     <button class="button-white--x" type="reset">X</button>
   </div>
-  <p>Inputs</p>
-  <div class="contact">
+  <p class="enlaces">Inputs</p>
+  <div class="enlaces">
     <form class="contact-form">
       <input type="text" class="textb" placeholder="Your Name">
       <input type="email" class="textb" placeholder="Your Email">
