--- a/index.html
+++ b/index.html
@@ -55,18 +55,17 @@
           </form>
         </div>
       </nav>
-
     </header>
     <section class="second-ad content">
       <div>
         <div class="principal-ad">
           <h1>Encuentra lo que<br>buscas para tu mascota!</h1>
           <p>Echa un vistazo al catálogo!</p>
-          <a class="button-white--big" href="#">VER AHORA</a>
+          <a class="button-white--big" href="products.html">VER AHORA</a>
         </div>
         <div class="second-ad--box">
           <h2>Explorá la temporada de navidad!</h2>
-          <a class="button-white--small" href="#">Ver artículos</a>
+          <a class="button-white--small" href="christmas.html">Ver artículos</a>
         </div>
       </section>
     </div>
