--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li><a href="products.html">Catálogo</a></li>
             <li><a href="contact.html">Contacto</a></li>
             <li><a href="about_us.html">Nosotros</a></li>
-            <li><a href="#"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
+            <li><a href="cart-page-empty.html"><img src="img/Carrito.svg" alt="Enlace hacía carrito de compras"></a></li>
             <li><a href="#"><img src="img/user.svg" alt="Enlace hacia perfil"></a></li>
           </ul>
         </div>
