--- a/newest.html
+++ b/newest.html
@@ -63,7 +63,7 @@
     </div>
     <div class="sections-container">
       <div class="section-topic">
-        <a class="button-yellow--small2" href="#">Atrás</a>
+        <a class="button-yellow--small2" href="products.html">Atrás</a>
         <h2>Lo más nuevo!</h2>
       </div>
       <div class="section-container">
