--- a/products.html
+++ b/products.html
@@ -64,7 +64,7 @@
     <div class="sections-container">
       <div class="section-container">
         <div class="products-topic">
-          <p>Lo más nuevo!</p><a class="button-yellow--small" href="#">Ver</a>
+          <p>Lo más nuevo!</p><a class="button-yellow--small" href="newest.html">Ver</a>
         </div>
         <div class="products-info-container">
           <div>
@@ -87,7 +87,7 @@
       </div>
       <div class="section-container">
         <div class="products-topic">
-          <p>En tendencia!</p><a class="button-yellow--small" href="#">Ver</a>
+          <p>En tendencia!</p><a class="button-yellow--small" href="trending.html">Ver</a>
         </div>
         <div class="products-info-container">
           <div>
@@ -110,7 +110,7 @@
       </div>
       <div class="section-container">
         <div class="products-topic">
-          <p>Ofertas!</p><a class="button-yellow--small" href="#">Ver</a>
+          <p>Ofertas!</p><a class="button-yellow--small" href="offerts.html">Ver</a>
         </div>
         <div class="products-info-container">
           <div>
